syntax = "proto3";

enum NODETYPE
{
	INVALID_NOTE_TYPE = 0;
	GATEWAY = 1;
	LBSRV = 2;
	GAMESRV = 3;
	PROXY = 4;
	DBSRV = 5;
	IOSRV = 6;
}

message Variant
{
	oneof value
	{
		bool bool_ = 1;
		int32 int32_ = 2;
		uint32 uint32_ = 3;
		int64 int64_ = 4;
		uint64 uint64_ = 5;
		float float_ = 6;
		double double_ = 7;
		string string_ = 8;
	}
}
