// ss protocol pxclt <-> proxy

syntax = "proto3";

message SSPCPXNodeRegister
{
}

message SSPCPXNodeUnregister
{
}

message SSPCPXHeartBeatReq
{
}

message SSPXPCHeartBeatRsp
{
}
