syntax = "proto3";

import "sslcls.proto";

enum NODETYPE
{
	GATEWAY = 0;
	LBSRV = 1;
	GAMESRV = 2;
	PROXY = 3;
	DBSRV = 4;
	CGISRV = 5;
}

enum MSGTYPE
{
	NORMAL = 0;
	RPC = 1;
}

message SSPkgHead
{
	NODETYPE from_node_type = 1;
	uint32 from_node_id = 2;
	NODETYPE to_node_type = 3;
	uint32 to_node_id = 4;
	uint32 id = 5;
	MSGTYPE msg_type = 6;
	uint64 rpc_id = 7;
}

message SSPkgBody
{
	oneof body
	{
		SSLCLSPkgBody lcls_body = 1;
	}
}

message SSPkg
{
	SSPkgHead head = 1;
	SSPkgBody body = 2;
}